- implementing colors file - fixing background blurred edge - draft for active status

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,5 @@
 @import "compass/reset";
+@import "colors.scss";
 
 * {
     font-family: Futura, Arial, sans-serif;
@@ -12,19 +13,25 @@ body {
 }
 
 body {
-    background-color: #000;
+    background-color: $color-black;
 }
 
-#bg {
+#bg-wrap {
     position: fixed;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
-    background: url(../images/skyrim.jpg);
-    background-size: cover;
-    -webkit-filter: blur(8px);
     z-index: -1;
+}
+
+#bg {
+    display: block;
+    margin: {
+        left: -20px;
+        top: -20px;
+    }
+    width: 140%;
+    height: 140%;
+    -webkit-filter: blur(8px);
 }
 
 .div-button,
@@ -32,8 +39,8 @@ button {
     cursor: pointer;
     border: 0;
     background: none;
-    color: #FFF;
-    text-shadow: 1px 1px 2px #000;
+    color: $color-white;
+    text-shadow: 0.136em 0.1em 0 $color-black;
 }
 
 #lists-wrap {
@@ -42,7 +49,7 @@ button {
     height: 100%;
     overflow: hidden;
     position: relative;
-    background: rgba(0,0,0,0.4);
+    background: $color-black-bg;
     ul {
         display: inline-block;
         vertical-align: top;
@@ -70,5 +77,15 @@ button {
 
     + .item-effects {
         display: none;
+    }
+
+    &.active {
+        
+        font-size: 1.6em;
+        white-space: normal;
+
+        + .item-effects {
+            display: block;
+        }
     }
 }
